<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/activity_detail"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity"
        android:background="@android:color/white">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        <ImageView
                android:id="@+id/img_data_received"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/detail_foto"
                android:src="@drawable/bandar_seri_begawan"
                android:background="@color/cardview_dark_background"
                android:scaleType="fitXY"/>

        <TextView
                style="@style/TextContent"
                android:id="@+id/tv_item_name_received"
                android:textSize="24sp"
                android:text="@string/city_name"
                android:layout_marginTop="16dp"
                android:textColor="@android:color/black"/>

        <TextView
                style="@style/TextContent"
                android:id="@+id/tv_item_detail_received"
                android:text="@string/city_detail"
                android:lineSpacingMultiplier="1"
                android:textColor="@android:color/black"
        />

        <RelativeLayout
                android:layout_marginTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <Button
                    style="@style/Button"
                    android:id="@+id/btn_tiket"
                    android:text="@string/destination"/>

            <Button
                    style="@style/Button"
                    android:id="@+id/btn_destination"
                    android:layout_below="@+id/btn_tiket"
                    android:text="@string/ticket"/>
        </RelativeLayout>
    </LinearLayout>
</ScrollView>